# SlamySTM32Floppy

./: .cproject  Pins.ods  README.md  Zeit.ods
src_uC/: .cproject  .project  CMakeLists.txt  cleanbuild.sh  floppy_control.c  floppy_control.h  floppy_crc.c  floppy_crc.h  floppy_flux.c  floppy_flux.h  floppy_flux_read.c  floppy_flux_read.h  floppy_flux_write.c  floppy_flux_write.h  floppy_gcr_read.c  floppy_gcr_read.h  floppy_indexSim.c  floppy_indexSim.h  floppy_mfm.c  floppy_mfm.h  floppy_mfm_read.c  floppy_sector.c  floppy_sector.h  floppy_sector_amiga.c  floppy_sector_c64.c  floppy_sector_iso.c  floppy_sector_raw.c  floppy_sector_raw.h  floppy_sector_raw_syncFinder.c  floppy_settings.c  floppy_settings.h  libcsupport.c  main.c  openocd.cfg  stm32_flash.ld  stm32f4xx_it.c
src_uC/Tilzor/: tm_stm32f4_usb_vcp.c  tm_stm32f4_usb_vcp.h
src_uC/Tilzor/usb_cdc_device/: usbd_cdc_core.c  usbd_cdc_core.h  usbd_conf.h
src_uC/pt-1.4/: lc.h
test/: CMakeLists.txt  main.c  rawVerifyTest.c
test/stubs/: stm32f4_discovery.h  stm32f4xx_tim.h
tool/: 49-slamyStm32Floppy.rules  amiga_ipf.c  amstradCpc_dsk.c  c64_d64_g64.c  ipf.c  makefile  noHeaderImage.c  slamySTM32Floppy.c  slamySTM32Floppy.h
